@@ -1,3 +1,9 @@
+2012-03-06  Jeff Hobbs  <jeffh@>
+
+	* tkcon.tcl (idebug): better line handling to not use list
+	functions. [Bug 111462] (goth)
+	(tkcon): pass any init args to 'tkcon show'
+
 2011-10-28  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* pkgIndex.tcl: update to v2.7
